--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,34 +1,14 @@
 @import "./base.css";
 
 #app {
-  max-width: 1280px;
+  max-width: 1500px;
   margin: 0 auto;
   padding: 2rem;
 
   font-weight: normal;
 }
 
-a,
-.green {
-  text-decoration: none;
+a {
   transition: 0.4s;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
-}
